# simple-archive

./: .bumpversion.toml  .gitignore  .sourcery.yaml  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  saf-builder.py
.github/workflows/: release.yml
simple_archive/: __init__.py  cli.py  simple_archive.py  use_cases.py
tests/: test_dublin_core.py  test_simple_archive.py
