[tool.poetry]
name = "simple-archive"
version = "0.1.0"
description = "CLI and library for working with Simple Archive Formaat"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_archive"}]

[tool.poetry.dependencies]
python = ">=3.8"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ruff = "^0.0.252"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38","py39","py310", "py311"]

[tool.ruff]
select = ["A", "E", "F", "I", "W", "B", "S"]

line-length = 88

ignore = ["E501"]

unfixable = ["B"]
